apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: default
spec:
  selector:
    app: qbittorrent
  ports:
    - name: web-ui
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: bittorrent-tcp
      protocol: TCP
      port: 6881
      targetPort: 6881
    - name: bittorrent-udp
      protocol: UDP
      port: 6881
      targetPort: 6881
